# dfast-stress-testing

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  sample.csv
.github/workflows/: ci.yml
data/: sample.csv  sample_dscr.csv
notebooks/: 01_eda.ipynb  01_eda_sample.ipynb
scripts/: generate_sample_data.py
src/dfast/: __init__.py  config.py
src/dfast/data/: __init__.py  cleaning.py  feature_engineering.py  ingestion.py  macro_scenarios.py  schemas.py
src/dfast/pipelines/: __init__.py  data_pipeline.py
tests/: conftest.py
tests/unit/: test_cleaning.py  test_feature_engineering.py  test_macro_scenarios.py
