[project]
name = "dfast-stress-testing"
version = "0.1.0"
description = "DFAST Stress Testing ML Pipeline — Fannie Mae Multifamily Loan Portfolio"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "boto3>=1.34",
    "metaflow>=2.11",
    "mlflow>=2.10",
    "pandera>=0.18",
    "evidently>=0.4",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "psycopg2-binary>=2.9",
    "httpx>=0.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "nbformat>=5.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "pandas-stubs>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dfast"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/dfast --cov-report=term-missing -v"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
